# VendingMachineReborn

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  getToolchain.sh  platformio.ini
Raspberry Pi Script/: sendrequest.py
lib/: CMakeLists.txt
src/: CMakeLists.txt  VendingMachineConfig.h.template  main.cpp
src/Core/: CMakeLists.txt  ConfigManager.cpp  Core.cpp  FSM.cpp  destructors.cpp
src/Core/include/: Config.h  ConfigManager.h  Core.h  FSM.h  HALFactory.h
src/Core/include/interfaces/: ICardReader.h  IConfigPersistence.h  ICore.h  IDisplay.h  IPollable.h
src/Core/tests/: CMakeLists.txt  ConfigManagerTests.cpp  FSMTests.cpp
src/HAL/: CMakeLists.txt
src/HAL/ConnectedLaunchpad/: CMakeLists.txt
src/HAL/STNucleo144/: CMakeLists.txt  NucleoHALFactory.cpp
src/HAL/pc/: CMakeLists.txt
src/Modules/: CMakeLists.txt
src/Modules/display/Dummy/: CMakeLists.txt  DummyDisplay.cpp  DummyDisplay.h
targets/stm32/: CMakeLists.txt  STM32H743ZI.cmake
targets/stm32/Platform/: stm32.cmake
targets/tivac-launchpad/: CMakeLists.txt  toolchain.cmake
targets/tivac-launchpad/Platform/: Connected_Launchpad.cmake
